--- a/basics-concepts/src/app/app.component.html
+++ b/basics-concepts/src/app/app.component.html
@@ -1,1 +1,13 @@
-<p>Hello World</p>
+
+<input (keyup)="changeImage($event)" [value]="imgUrl">
+
+<app-post [img]="imgUrl" (imgSelected)="logImage($event)"> 
+    <p>
+        Some caption
+    </p>
+</app-post>
+
+
+<p>Hello {{name.toUpperCase()}}</p>
+<p>Hello {{getName()}}</p>
+<p>{{15+ 5}}</p>
