--- a/basics-concepts/src/app/app.component.html
+++ b/basics-concepts/src/app/app.component.html
@@ -1,13 +1,39 @@
+<ng-template [ngIf]="blueClass">
+    <p>Button is blue</p>
+</ng-template>
 
+<!-- mesma coisa    <p *ngIf="blueClass">Button is blue</p> -->
+
+<button (click)="blueClass = !blueClass" [ngClass]="{blue: blueClass}" [ngStyle]="{
+    'font-size.px': fontSize
+}">Change Color</button>
+
+<hr>
 <input (keyup)="changeImage($event)" [value]="imgUrl">
 
-<app-post [img]="imgUrl" (imgSelected)="logImage($event)"> 
+<app-post *ngFor="let image of images; let i = index" [img]="image" (imgSelected)="logImage($event)"> 
     <p>
-        Some caption
+        Some caption {{i}}
     </p>
 </app-post>
 
 
-<p>Hello {{name.toUpperCase()}}</p>
+<p>Hello {{name | titlecase}}</p>
 <p>Hello {{getName()}}</p>
 <p>{{15+ 5}}</p>
+<p>{{currentDate | date: 'short' }}</p>
+<p>
+    {{
+        cost | currency: 'BRL'
+    }}
+</p>
+
+<p> 
+    {{
+        temperature | number: '1.0-0'
+    }}
+</p>
+
+<pre>
+    {{pizza | json}}
+</pre>
