--- a/clips/src/app/user/register/register.component.html
+++ b/clips/src/app/user/register/register.component.html
@@ -3,15 +3,12 @@
         <!-- Name -->
         <div class="mb-3">
           <label class="inline-block mb-2">Name</label>
-          <input formControlName="name" type="text"
-            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
-              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-            placeholder="Enter Name" />
+          <app-input [control]="name"></app-input>
         </div>
         <!-- Email -->
         <div class="mb-3">
           <label class="inline-block mb-2">Email</label>
-          <input type="email"
+          <input formControlName="email" type="email"
             class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
             placeholder="Enter Email" />
@@ -19,14 +16,14 @@
         <!-- Age -->
         <div class="mb-3">
           <label class="inline-block mb-2">Age</label>
-          <input type="number"
+          <input type="number" formControlName="age"
             class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" />
         </div>
         <!-- Password -->
         <div class="mb-3">
           <label class="inline-block mb-2">Password</label>
-          <input type="password"
+          <input type="password" formControlName="password"
             class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
             placeholder="Password" />
@@ -34,7 +31,7 @@
         <!-- Confirm Password -->
         <div class="mb-3">
           <label class="inline-block mb-2">Confirm Password</label>
-          <input type="password"
+          <input type="password" formControlName="confirm_password"
             class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
             placeholder="Confirm Password" />
@@ -42,7 +39,7 @@
         <!-- Phone Number -->
         <div class="mb-3">
           <label class="inline-block mb-2">Phone Number</label>
-          <input type="text"
+          <input type="text" formControlName="phoneNumber"
             class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
               duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
             placeholder="Enter Phone Number" />
